[package]
name = "tmp"
version = "0.1.0"
authors = ["Sergei Belokon <srj.belokon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33.3"
