[package]
name = "bakdf"
version = "1.1.0"
authors = ["Sergei Belokon <srj.belokon@gmail.com>"]
description = """
bakdf stands for backup dotfiles, this is a command line tool that just
copies configuration files which usually are located inside an user's
home directory and places them to a local git repository.
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "bf"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33.3"
